--- a/hero/rotating products/style.css
+++ b/hero/rotating products/style.css
@@ -17,16 +17,14 @@ header {
 
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  height: 100px;
-  margin: 20px 0;
+  height: 20vh;
 }
 
 .logo {
   width: 130px;
-  margin-left: 100px;
 }
 
 nav ul {
@@ -34,7 +32,6 @@ nav ul {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 100px;
 }
 
 nav ul li {
@@ -68,4 +65,206 @@ nav ul li a:hover::after {
   width: 80%;
   position: relative;
   left: 5px;
+}
+
+.hero {
+  display: flex;
+  align-items: flex-start;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 80vh;
+}
+
+.hero-content {
+  width: 50%;
+  padding: 50px 100px 50px 200px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.hero-content h1 {
+  width: 70%;
+  font-size: 4rem;
+  margin-bottom: 50px;
+}
+
+.hero-content p {
+  width: 70%;
+  margin-bottom: 50px;
+}
+
+.hero-content button {
+  width: 150px;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  background-color: rgb(190, 123, 252);
+  font-size: 1.15rem;
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
+  transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -ms-transition: 0.2s;
+  -o-transition: 0.2s;
+}
+
+.hero-content button:hover {
+  background-color: rgb(168, 82, 248);
+  box-shadow: -7px 7px rgb(161, 161, 161);
+  transform: translate(7px, -7px);
+  -webkit-transform: translate(7px, -7px);
+  -moz-transform: translate(7px, -7px);
+  -ms-transform: translate(7px, -7px);
+  -o-transform: translate(7px, -7px);
+}
+
+.hero-product {
+  width: 50%;
+  height: 80vh;
+  padding: 50px 200px 50px 100px;
+}
+
+.products-img {
+  border: 1px solid rgba(114, 113, 113, 0.26);
+  border-radius: 15px;
+  position: relative;
+  height: 70%;
+  width: 70%;
+  overflow: hidden;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+}
+
+.product-cercle {
+  margin: 0;
+  /*border: 1px green solid;
+  */height: 700px;
+  width: 700px;
+  display: flex;
+  position: absolute;
+  transition: 3s ;
+  -webkit-transition: 3s ;
+  -moz-transition: 3s ;
+  -ms-transition: 3s ;
+  -o-transition: 3s ;
+  left: 200px;
+  top: 50px;
+}
+
+.product-cercle img {
+  position: absolute;
+  width: 150px;
+  transition: 3s;
+  -webkit-transition: 3s;
+  -moz-transition: 3s;
+  -ms-transition: 3s;
+  -o-transition: 3s;
+}
+
+.product-cercle img:nth-child(1) {
+  top: 0;
+}
+.product-cercle img:nth-child(2) {
+  bottom: 0;
+}
+.product-cercle img:nth-child(3) {
+  right: 0;
+}
+.product-cercle img:nth-child(4) {
+  bottom: 0;
+  right: 0;
+}
+
+.first-product {
+top: 95px;
+left: 50px;
+}
+
+.first-product:hover {
+  transform: rotate(-360deg);
+  -webkit-transform: rotate(-360deg);
+  -moz-transform: rotate(-360deg);
+  -ms-transform: rotate(-360deg);
+  -o-transform: rotate(-360deg);
+}
+
+.first-product:hover img {
+  transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+}
+
+.second-product:hover {
+  transform: rotate(-360deg);
+  -webkit-transform: rotate(-360deg);
+  -moz-transform: rotate(-360deg);
+  -ms-transform: rotate(-360deg);
+  -o-transform: rotate(-360deg);
+}
+
+.second-product:hover img {
+  transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+}
+
+.colors-panel {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+    rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+}
+
+.colors-panel div {
+  width: 40px;
+  height: 40px;
+  margin: 0 20px;
+  border: 3px rgba(255, 255, 255, 0.459) solid;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  cursor: pointer;
+}
+
+.colors-panel div:hover {
+  border: 4px rgba(14, 14, 14, 0.171) solid;
+  transform: scale(1.1);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
+.colors-panel div:nth-child(1) {
+  background-color: rgb(255, 195, 127);
+}
+.colors-panel div:nth-child(2) {
+  background-color: rgb(129, 127, 255);
+}
+.colors-panel div:nth-child(3) {
+  background-color: rgb(255, 127, 244);
+}
+.colors-panel div:nth-child(4) {
+  background-color: rgb(255, 127, 127);
 }
