hero product rotation

--- a/hero/rotating products/style.css
+++ b/hero/rotating products/style.css
@@ -13,6 +13,7 @@
 
 header {
   font-family: "Fredoka", sans-serif;
+  background-color: #e4cbc7;
 }
 
 nav {
@@ -70,6 +71,7 @@ nav ul li a:hover::after {
 .hero {
   display: flex;
   align-items: flex-start;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   width: 100vw;
@@ -133,94 +135,37 @@ nav ul li a:hover::after {
   border: 1px solid rgba(114, 113, 113, 0.26);
   border-radius: 15px;
   position: relative;
-  height: 70%;
-  width: 70%;
+  height: 400px;
+  width: 460px;
   overflow: hidden;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
 }
 
 .product-cercle {
-  margin: 0;
-  /*border: 1px green solid;
-  */height: 700px;
+  height: 700px;
   width: 700px;
-  display: flex;
   position: absolute;
-  transition: 3s ;
-  -webkit-transition: 3s ;
-  -moz-transition: 3s ;
-  -ms-transition: 3s ;
-  -o-transition: 3s ;
-  left: 200px;
+  left: 250px;
   top: 50px;
+  transition: 0.8s ease-in-out;
 }
 
 .product-cercle img {
   position: absolute;
-  width: 150px;
-  transition: 3s;
-  -webkit-transition: 3s;
-  -moz-transition: 3s;
-  -ms-transition: 3s;
-  -o-transition: 3s;
-}
-
-.product-cercle img:nth-child(1) {
-  top: 0;
-}
-.product-cercle img:nth-child(2) {
-  bottom: 0;
-}
-.product-cercle img:nth-child(3) {
-  right: 0;
-}
-.product-cercle img:nth-child(4) {
-  bottom: 0;
-  right: 0;
+  width: 170px;
+  height: 300px;
+  transition: 0.8s ease-in-out;
 }
 
 .first-product {
-top: 95px;
-left: 50px;
+  left: 45px;
 }
 
-.first-product:hover {
-  transform: rotate(-360deg);
-  -webkit-transform: rotate(-360deg);
-  -moz-transform: rotate(-360deg);
-  -ms-transform: rotate(-360deg);
-  -o-transform: rotate(-360deg);
-}
-
-.first-product:hover img {
-  transform: rotate(360deg);
-  -webkit-transform: rotate(360deg);
-  -moz-transform: rotate(360deg);
-  -ms-transform: rotate(360deg);
-  -o-transform: rotate(360deg);
-}
-
-.second-product:hover {
-  transform: rotate(-360deg);
-  -webkit-transform: rotate(-360deg);
-  -moz-transform: rotate(-360deg);
-  -ms-transform: rotate(-360deg);
-  -o-transform: rotate(-360deg);
-}
-
-.second-product:hover img {
-  transform: rotate(360deg);
-  -webkit-transform: rotate(360deg);
-  -moz-transform: rotate(360deg);
-  -ms-transform: rotate(360deg);
-  -o-transform: rotate(360deg);
+.second-product img {
+  left: 0;
 }
 
 .colors-panel {
-  width: 70%;
+  width: 460px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -257,14 +202,15 @@ left: 50px;
 }
 
 .colors-panel div:nth-child(1) {
-  background-color: rgb(255, 195, 127);
+  background-color: rgb(161, 95, 237);
 }
 .colors-panel div:nth-child(2) {
-  background-color: rgb(129, 127, 255);
+  background-color: rgb(142, 244, 99);
 }
 .colors-panel div:nth-child(3) {
-  background-color: rgb(255, 127, 244);
+  background-color: rgb(247, 139, 65);
 }
 .colors-panel div:nth-child(4) {
-  background-color: rgb(255, 127, 127);
+  /* background-color: rgb(255, 127, 127); */
+  background-color: rgb(229, 117, 101);
 }
